--- a/EndProjectOrgani/Views/Product/ProductDetailsPage.cshtml
+++ b/EndProjectOrgani/Views/Product/ProductDetailsPage.cshtml
@@ -1,6 +1,9 @@
 ﻿@model (Product product, List<Product> productlist)
 
 
+<link rel="stylesheet" href="~/MemberPanel/assets/sass/shopdetail.css">
+<link rel="stylesheet" href="~/MemberPanel/assets/css/shopdetail.css">
+
 <main>
     <section id="background-potatoes">
         <div class="background-potatoes">
@@ -300,3 +303,9 @@
         </div>
     </section>
 </main>
+
+
+@section Scripts {
+    <script asp-append-version="true" src="~/MemberPanel/assets/js/shopdetail.js"></script>
+
+}
