--- a/EndProjectOrgani/Areas/AdminPanel/Views/Comment/Details.cshtml
+++ b/EndProjectOrgani/Areas/AdminPanel/Views/Comment/Details.cshtml
@@ -10,8 +10,8 @@
             <div class="container mt-2">
                 <div class="table-responsive pt-3">
                     <div class="nm">
-                        <label asp-for="SaleOffId" style="padding-left:70px;">SaleOff <sup>*</sup></label><br>
-                        <div class="name">@Model.SaleOff.Name</div>
+                        <label asp-for="ProductId" style="padding-left:70px;">SaleOff <sup>*</sup></label><br>
+                        <div class="name">@Model.Product.Name</div>
 
                         <label asp-for="Message" style="padding-left:70px;">Message <sup>*</sup></label><br>
                         <div class="name">@Model.Message</div>
