--- a/EndProjectOrgani/Areas/AdminPanel/Views/Comment/Update.cshtml
+++ b/EndProjectOrgani/Areas/AdminPanel/Views/Comment/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model (Comment product, List<SaleOff> categories)
+﻿@model (Comment product, List<Product> categories)
 
 <div class="row">
     <div class="container">
@@ -9,8 +9,8 @@
             <div class="container mt-2">
                 <form method="post" asp-action="Update" asp-controller="Comment" asp-area="AdminPanel">
                     <div class="table-responsive pt-3">
-                        <label asp-for="product.SaleOffId" style="padding-left:70px;">SaleOff <sup>*</sup></label><br>
-                        <select asp-for="product.SaleOffId" asp-items="@(new SelectList(Model.categories,"Id","Name"))" style="width:90%;border: none;margin-left: 70px;min-height:40px;background-color:black;color: white;padding-left: 20px;"></select><br><br>
+                        <label asp-for="product.ProductId" style="padding-left:70px;">SaleOff <sup>*</sup></label><br>
+                        <select asp-for="product.ProductId" asp-items="@(new SelectList(Model.categories,"Id","Name"))" style="width:90%;border: none;margin-left: 70px;min-height:40px;background-color:black;color: white;padding-left: 20px;"></select><br><br>
 
                         <label asp-for="product.Message" style="padding-left:70px;">Message <sup>*</sup></label><br>
                         <input asp-for="product.Message" style="width:90%;border: none;margin-left: 70px;min-height:40px;background-color:white;color: black;padding-left: 20px;"><br><br>
