--- a/EndProjectOrgani/Views/Product/ProductDetailsPage.cshtml
+++ b/EndProjectOrgani/Views/Product/ProductDetailsPage.cshtml
@@ -1,4 +1,4 @@
-﻿@model (Product product, List<Product> productlist)
+﻿@model (Product product, List<Product> productlist, List<Comment> commentlist,Comment comment)
 
 
 <link rel="stylesheet" href="~/MemberPanel/assets/sass/shopdetail.css">
@@ -168,88 +168,108 @@
                 </div>
 
                 <div class="description d-none" data-id="3">
-                    <div>
-                        <textarea placeholder="Please write your review..." name="" id="" cols="157" rows="10"></textarea>
-                    </div>
 
-                    <div class="send-btn pt-3" style="display:flex;justify-content:flex-end;padding-right:70px;">
-                        <button style="width:150px;letter-spacing: 1px;" class="btn btn-success" id="send">
-                            Send
-                        </button>
-                    </div>
-
-                    <div class="comments" style="text-align:center;color: rgba(0,0,0,0.6);font-weight: bold;margin-top: 20px;letter-spacing: 1px;">
-                        Reviews
-                    </div>
-                    <div class="comment-parts">
-                        <div class="d-flex into-cmt">
-                            <div class="user-img">
-                                <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
-                            </div>
-                            <div class="user-comment">
-                                <div class="name">
-                                    ELMIR USTAYEV
-                                </div>
-                                <div class="cmt">
-                                    Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
-                                </div>
-                            </div>
-                            <hr>
-                        </div>
-                        <div class="d-flex into-cmt">
-                            <div class="user-img">
-                                <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
-                            </div>
-                            <div class="user-comment">
-                                <div class="name">
-                                    ELMIR USTAYEV
-                                </div>
-                                <div class="cmt">
-                                    Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
-                                </div>
-                            </div>
-                        </div>
-                        <div class="d-flex into-cmt">
-                            <div class="user-img">
-                                <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
-                            </div>
-                            <div class="user-comment">
-                                <div class="name">
-                                    ELMIR USTAYEV
-                                </div>
-                                <div class="cmt">
-                                    Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
-                                </div>
-                            </div>
-                        </div>
-                        <div class="d-flex into-cmt">
-                            <div class="user-img">
-                                <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
-                            </div>
-                            <div class="user-comment">
-                                <div class="name">
-                                    ELMIR USTAYEV
-                                </div>
-                                <div class="cmt">
-                                    Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
-                                </div>
-                            </div>
-                        </div>
-                        <div class="d-flex into-cmt">
-                            <div class="user-img">
-                                <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
-                            </div>
-                            <div class="user-comment">
-                                <div class="name">
-                                    ELMIR USTAYEV
-                                </div>
-                                <div class="cmt">
-                                    Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
-                                </div>
-                            </div>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                    <form method="post" asp-action="Comment" asp-controller="Product">
+                        <div>
+                            <input type="text" asp-for="@Model.comment.ByName" placeholder="Name and Surname..." style="width:91%;height:42px;letter-spacing:1px;">
                         </div>
 
-                    </div>
+                        <div>
+                            <textarea asp-for="@Model.comment.Message" placeholder="Please write your review..." cols="157" rows="10"></textarea>
+                        </div>
+
+                        <div class="send-btn pt-3" style="display:flex;justify-content:flex-end;padding-right:70px;">
+                            <button type="submit" style="width:150px;letter-spacing: 1px;" class="btn btn-success" id="send">
+                                Send
+                            </button>
+                        </div>
+                    </form>
+
+                        <div class="comments" style="text-align:center;color: rgba(0,0,0,0.6);font-weight: bold;margin-top: 20px;letter-spacing: 1px;">
+                            Reviews
+                        </div>
+
+                        <div class="comment-parts">
+                            @foreach (var comment in Model.commentlist)
+                            {
+                            <div class="d-flex into-cmt">
+                                <div class="user-img">
+                                    <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
+                                </div>
+                                <div class="user-comment">
+                                    <div class="name">
+                                        @comment.ByName
+                                    </div>
+                                    <div class="cmt">
+                                        @comment.Message
+                                    </div>
+                                </div>
+                                <hr>
+                            </div>
+                            }
+                            @*<div class="d-flex into-cmt">
+                                <div class="user-img">
+                                    <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
+                                </div>
+                                <div class="user-comment">
+                                    <div class="name">
+                                        ELMIR USTAYEV
+                                    </div>
+                                    <div class="cmt">
+                                        Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex into-cmt">
+                                <div class="user-img">
+                                    <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
+                                </div>
+                                <div class="user-comment">
+                                    <div class="name">
+                                        ELMIR USTAYEV
+                                    </div>
+                                    <div class="cmt">
+                                        Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex into-cmt">
+                                <div class="user-img">
+                                    <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
+                                </div>
+                                <div class="user-comment">
+                                    <div class="name">
+                                        ELMIR USTAYEV
+                                    </div>
+                                    <div class="cmt">
+                                        Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex into-cmt">
+                                <div class="user-img">
+                                    <img src="~/MemberPanel/assets/img/user.webp" style="width: 100%;height: 100%;" alt="">
+                                </div>
+                                <div class="user-comment">
+                                    <div class="name">
+                                        ELMIR USTAYEV
+                                    </div>
+                                    <div class="cmt">
+                                        Çox keyfiyyətli məhsuldur.Tövsiyyə edirəm
+                                    </div>
+                                </div>
+                            </div>*@
+
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="alert alert-info" role="alert">
+                            Rey bildirmek ucun hesaba giris etmelisiniz.<a asp-controller="Account" asp-action="Login">Login</a>
+                        </div>
+                    }
 
 
 
