Create search and add js

--- a/EndProjectOrgani/Views/Blog/BlogDetailsPage.cshtml
+++ b/EndProjectOrgani/Views/Blog/BlogDetailsPage.cshtml
@@ -1,5 +1,10 @@
 ﻿@model Blog
 
+@section style{
+
+    <link rel="stylesheet" href="~/MemberPanel/assets/sass/blogdetail.css">
+    <link rel="stylesheet" href="~/MemberPanel/assets/css/blogdetail.css">
+}
 
 <main>
     <section id="background-potatoes">
