--- a/EndProjectOrgani/Views/Product/ProductDetailsPage.cshtml
+++ b/EndProjectOrgani/Views/Product/ProductDetailsPage.cshtml
@@ -52,18 +52,7 @@
                             </div>
 
                             <div class="addtocart">
-                                <div class="count">
-                                    <span class="minus">
-                                        -
-                                    </span>
-
-                                    <span class="cnt">
-                                        0
-                                    </span>
-                                    <span class="plus">
-                                        +
-                                    </span>
-                                </div>
+                              
 
                                 <div class="addbtn">
                                     <button>
@@ -179,8 +168,12 @@
                         <div>
                             <textarea asp-for="@Model.comment.Message" placeholder="Please write your review..." cols="157" rows="10"></textarea>
                         </div>
-
+                        
                         <div class="send-btn pt-3" style="display:flex;justify-content:flex-end;padding-right:70px;">
+                            <input asp-for="@Model.comment.Product" type="hidden" />
+                            
+
+                 
                             <button type="submit" style="width:150px;letter-spacing: 1px;" class="btn btn-success" id="send">
                                 Send
                             </button>
