--- a/EndProjectOrgani/Views/Product/ProductPage.cshtml
+++ b/EndProjectOrgani/Views/Product/ProductPage.cshtml
@@ -3,6 +3,9 @@
 <link rel="stylesheet" href="~/MemberPanel/assets/sass/products.css">
 <link rel="stylesheet" href="~/MemberPanel/assets/css/products.css">
 
+<link rel="stylesheet" href="~/MemberPanel/assets/sass/home.css">
+<link rel="stylesheet" href="~/MemberPanel/assets/css/home.css">
+
 <main>
     <section id="background-potatoes">
         <div class="background-potatoes">
