--- a/EndProjectOrgani/Views/Shop/ShopPage.cshtml
+++ b/EndProjectOrgani/Views/Shop/ShopPage.cshtml
@@ -4,6 +4,9 @@
 
 <link rel="stylesheet" asp-append-version="true" href="~/MemberPanel/assets/css/shop.css">
 
+<link rel="stylesheet" href="~/MemberPanel/assets/sass/home.css">
+<link rel="stylesheet" href="~/MemberPanel/assets/css/home.css">
+
 
 <main>
 
@@ -199,7 +202,7 @@
                                                     <a href="" id="addheart"><i class="fas fa-heart"></i></a>
                                                 </div>
                                                 <div class="basket-icon">
-                                                    <a href=""id="addproduct"> <i class="fas fa-shopping-cart"></i></a>
+                                                    <a href="" id="addproduct"> <i class="fas fa-shopping-cart"></i></a>
                                                 </div>
                                                 <div class="detail-icon">
                                                     <a href=""> <i class="fas fa-info"></i></a>
@@ -243,8 +246,8 @@
 </main>
 
 @section Scripts {
-    <script  asp-append-version="true" src="~/MemberPanel/assets/js/shop.js"></script>
-    
+    <script asp-append-version="true" src="~/MemberPanel/assets/js/shop.js"></script>
+
 }
 
 
