--- a/EndProjectOrgani/Views/Account/SignUpEmail.cshtml
+++ b/EndProjectOrgani/Views/Account/SignUpEmail.cshtml
@@ -1,3 +1,16 @@
-﻿<h3>
-    Xahis olunur Emailinizi tesdiq edesiniz...<a asp-action="login" asp-controller="Account">Login</a>
-</h3>
+﻿<link rel="stylesheet" href="~/MemberPanel/assets/sass/contact.css">
+<link rel="stylesheet" href="~/MemberPanel/assets/css/contact.css">
+
+
+<div style=" height: 279px; padding-top: 78px;">
+    <div style="text-align:center;" class="alert alert-primary" role="alert">
+        Xahiş olunur Emailinizi təsdiq edəsiniz... 
+    </div>
+</div>
+
+
+
+@section scripts {
+    <script asp-append-version="true" src="~/MemberPanel/assets/js/contact.js"></script>
+
+  }
