--- a/EndProjectOrgani/Views/Shared/_Layout.cshtml
+++ b/EndProjectOrgani/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
-
+    @RenderSection("style", false)
 
 
 
@@ -116,6 +116,8 @@
                                     }
                                     else
                                     {
+                                        <span>@User.Identity.Name</span>
+
                                         @if (User.IsInRole("Admin"))
                                         {
                                             <a asp-action="CategoryList" asp-controller="Category" asp-area="AdminPanel"><i style="font-size:21px;color:black;" class="bi bi-person-square"></i></a>
@@ -156,13 +158,13 @@
                                 <a asp-action="ProductPage" asp-controller="Product" id="drop">PRODUCT</a>
                             </li>
                             <li>
-                                <a asp-action="ShopPage" asp-controller="Shop" target="_blank" id="drop">SHOP</a>
+                                <a asp-action="ShopPage" asp-controller="Shop" id="drop">SHOP</a>
                             </li>
                             <li>
-                                <a asp-action="BlogPage" asp-controller="Blog" target="_blank" id="drop">BLOG</a>
+                                <a asp-action="BlogPage" asp-controller="Blog" id="drop">BLOG</a>
                             </li>
                             <li>
-                                <a asp-action="ContactPage" asp-controller="Contact" target="_blank" id="drop">CONTACT</a>
+                                <a asp-action="ContactPage" asp-controller="Contact" id="drop">CONTACT</a>
                             </li>
 
                         </ul>
@@ -175,7 +177,7 @@
                                 <span class="heart-count">
                                     0
                                 </span>
-                                <a href="~/MemberPanel/favori.html" target="_blank">
+                                <a asp-controller="common" asp-action="favoripage">
                                     <i class="fas fa-heart"></i>
                                 </a>
                             </span>
@@ -185,7 +187,7 @@
                                 <span class="basket-count">
                                     0
                                 </span>
-                                <a href="~/MemberPanel/shopcard.html" target="_blank">
+                                <a asp-controller="common" asp-action="basketpage">
                                     <i class="fas fa-shopping-basket"></i>
                                 </a>
                             </span>
@@ -228,10 +230,13 @@
                                 </div>
 
                             </div>
-                            <div>
-                                <input type="text" placeholder="What do you u need?">
-                                <button id="search">Search</button>
-                            </div>
+
+                            @await Component.InvokeAsync("ProductSearch")
+
+                            @*<div>
+                                    <input type="text" placeholder="What do you u need?">
+                                    <button id="search">Search</button>
+                                </div>*@
 
 
                         </div>
@@ -310,8 +315,10 @@
                                 Get E-mail updates about our latest shop and special offers.
                             </div>
 
-                            <input type="email" placeholder="Enter your Email...">
-                            <button id="subscribe">SUBSCRIBE</button>
+                            @*@await Component.InvokeAsync("Subscribe")*@
+
+                            @*<input type="email" placeholder="Enter your Email...">
+                                <button id="subscribe">SUBSCRIBE</button>*@
 
                             <div class="sociall">
                                 <div class="face"><i class="fab fa-facebook-f"></i></div>
@@ -358,16 +365,20 @@
 
 
     <script src="https://kit.fontawesome.com/ad811518ca.js" crossorigin="anonymous"></script>
-    @RenderSection("scripts", required: false)
+
+
 
 
     <script src="~/MemberPanel/assets/js/item.js"></script>
-  
+
+    @RenderSection("Scripts", required: false)
 
 
     @*<script type="module" src="~/MemberPanel/assets/js/products.js"></script>*@
 
+    @*<script src="~/MemberPanel/assets/js/home.js"></script>*@
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
 </body>
