--- a/EndProjectOrgani/Views/Account/SignUp.cshtml
+++ b/EndProjectOrgani/Views/Account/SignUp.cshtml
@@ -25,7 +25,7 @@
               
                 <button style="font-size: .9em; color: #fff; background: #76b852; outline: none; border: 1px solid #76b852; cursor: pointer; padding: 0.9em; -webkit-appearance: none; width: 95%; margin: 2em 0; letter-spacing: 4px;margin-top:0px;" type="submit">SIGN UP</button>
             </form>
-            <p>Do you have an Account? <a href="#"> Login Now!</a></p>
+            <p>Do you have an Account? <a asp-controller="account" asp-action="login"> Login Now!</a></p>
         </div>
     </div>
     <!-- copyright -->
